--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.1",
-    "node": "^18.10.0"
+    "node": "^18.10.0",
+    "uuid": "^9.0.0"
   },
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/buddylafluer/challenge11-NoteTaker.git"
